--- a/example2/docker-compose.yaml
+++ b/example2/docker-compose.yaml
@@ -1,15 +1,17 @@
 version: '3'
 services:
   app:
-    build: .
+    build:
+      context: app
+      dockerfile: Dockerfile
     environment:
-     - REDIS_HOST=redis
+      - REDIS_HOST=redis
     ports:
-     - "9999:9999"
+      - "9999:9999"
     volumes:
-     - .:/go/src/app
+      - .:/go/src/app
     command: go run main.go
     depends_on:
-     - redis
+      - redis
   redis:
     image: "redis:alpine"
